--- a/index.html
+++ b/index.html
@@ -25,11 +25,10 @@
     <section>
         <h2>Summary</h2>
         <p>Hello there, My name is Marwa Mohammed, I'm a Frontend Web Developer 1 year in Information Technology Institute of team work
-            experience and open source contributions, I enjoy building everything with JavaScript.</p>
+            experience and open source contributions.</p>
 
         <p>In this duration, I have learned a lot of technologies,
-            created many cool websites, collaborated with great developers
-            and contributed to open source projects.</p>
+            created many cool websites, collaborated with great developers.</p>
 
         <p>So I'm always seeking to have an opportunity that matches my skills,
             to make the best use of all what I have learned.</p>
@@ -50,8 +49,6 @@
             <span><i class="fa fa-angle-right"></i> Database</span>
             <span><i class="fa fa-angle-right"></i> C#</span>
             <span><i class="fa fa-angle-right"></i> Python</span>
-            <span><i class="fa fa-angle-right"></i> Software Engineering</span>
-            <span><i class="fa fa-angle-right"></i> Data Structure</span>
 
 
         </div>
